--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "test": "mocha"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "mocha": "^5.2.0",
-    "uuid": "^3.3.2"
+    "morgan": "^1.9.0",
+    "uuid": "^3.3.2",
+    "mongoose": "^5.0.13"
   },
   "repository": {
     "type": "git",
